add pagination and aggregatation
